@@ -1,3 +1,9 @@
+2008-07-11  Ronaldo Maia  <romaia@async.com.br>
+
+	reviewed by: Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/ui/objectlist.py: Enable more than one color on a ColoredColumn
+
 2008-06-23  Ronaldo Maia  <romaia@async.com.br>
 
 	reviewed by: Christian Reis  <kiko@async.com.br>
